2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Fix possible infinite recursion (bug #82303).

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly set the showStatic flag after finding a
	  member in SearchMember. Fixes a problem with nested classes and enums:
	  members were not properly shown.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Properly resolve inner class names. Fixes part of
	  #82414.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: When resolving a var name, parameters have priority
	  over fields.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs: Include arguments in the resolve list for CtrlSpace.
	  Fixes bug #82391.

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82398.
	* CSharpBindingCompilerManager.cs (GetResourceId): Run resgen with
	MONO_IOMAP=all.

2007-08-14  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs,
	  FormattingStrategy/CSharpIndentEngineStack.cs,
	  FormattingStrategy/CSharpIndentEngine.cs: Added support for
	  documentation comments 
	
	  (fixes bug 78578: Add XML Comment support to MonoDevelop and
	  integrate with tooltips).
	
	  + Auto complete of /// tags
	
	  + code completion for the xml documentation tags
	
	  + auto generation of a header body

2007-08-13  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Started to work on xml comment tag
	  support.

2007-08-10  Ankit Jain  <jankit@novell.com>

	Fix bug #82394.
	* CSharpBindingCompilerManager.cs (Compile): Abort build if error while
	generating resources.
	(GetResourceId): Refactor slightly to report error. Also, parse
	the line/col number for the CompilerError.
	(RegexErrorLinePos): New.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml, Autotools/Makefile.am, CSharpBinding.mdp,